update services
