# src/app/services/api/stepResource.service.ts
@@ -19,6 +19,8 @@ import { CustomHttpParameterCodec }                          from '../encoder';
 import { Observable }                                        from 'rxjs';
 
 // @ts-ignore
+import { NextStepDto } from '../model/nextStepDto';
+// @ts-ignore
 import { StepDto } from '../model/stepDto';
 
 // @ts-ignore
@@ -209,9 +211,9 @@ export class StepResourceService {
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
-    public apiPlanPlanIdStepStepIdNextsGet(planId: number, stepId: number, observe?: 'body', reportProgress?: boolean, options?: {httpHeaderAccept?: 'application/json', context?: HttpContext}): Observable<Array<StepDto>>;
-    public apiPlanPlanIdStepStepIdNextsGet(planId: number, stepId: number, observe?: 'response', reportProgress?: boolean, options?: {httpHeaderAccept?: 'application/json', context?: HttpContext}): Observable<HttpResponse<Array<StepDto>>>;
-    public apiPlanPlanIdStepStepIdNextsGet(planId: number, stepId: number, observe?: 'events', reportProgress?: boolean, options?: {httpHeaderAccept?: 'application/json', context?: HttpContext}): Observable<HttpEvent<Array<StepDto>>>;
+    public apiPlanPlanIdStepStepIdNextsGet(planId: number, stepId: number, observe?: 'body', reportProgress?: boolean, options?: {httpHeaderAccept?: 'application/json', context?: HttpContext}): Observable<Array<NextStepDto>>;
+    public apiPlanPlanIdStepStepIdNextsGet(planId: number, stepId: number, observe?: 'response', reportProgress?: boolean, options?: {httpHeaderAccept?: 'application/json', context?: HttpContext}): Observable<HttpResponse<Array<NextStepDto>>>;
+    public apiPlanPlanIdStepStepIdNextsGet(planId: number, stepId: number, observe?: 'events', reportProgress?: boolean, options?: {httpHeaderAccept?: 'application/json', context?: HttpContext}): Observable<HttpEvent<Array<NextStepDto>>>;
     public apiPlanPlanIdStepStepIdNextsGet(planId: number, stepId: number, observe: any = 'body', reportProgress: boolean = false, options?: {httpHeaderAccept?: 'application/json', context?: HttpContext}): Observable<any> {
         if (planId === null || planId === undefined) {
             throw new Error('Required parameter planId was null or undefined when calling apiPlanPlanIdStepStepIdNextsGet.');
@@ -251,7 +253,7 @@ export class StepResourceService {
             }
         }
 
-        return this.httpClient.get<Array<StepDto>>(`${this.configuration.basePath}/api/plan/${encodeURIComponent(String(planId))}/step/${encodeURIComponent(String(stepId))}/nexts`,
+        return this.httpClient.get<Array<NextStepDto>>(`${this.configuration.basePath}/api/plan/${encodeURIComponent(String(planId))}/step/${encodeURIComponent(String(stepId))}/nexts`,
             {
                 context: localVarHttpContext,
                 responseType: <any>responseType_,
